# wordfreqx

./: .gitignore  README.md  pyproject.toml
.github/: FUNDING.yml
src/wordfreqx/: __init__.py
tests/: test_cli.py
